<resources>
    <string name="navigation_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_close" translatable="false">close navigation drawer</string>
    <string name="app_name">DoanAppTravel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="caurongne">Cầu Rồng</string>
    <string name="typecaurong">Đêm là thời điểm đẹp nhất để ngắm cầu Rồng.
          Gắn 15 000 đèn led, cây cầu trở thành một con rồng thực thụ với hiệu ứng màu sắc lung linh.
          Hơn thế cầu Rồng còn thu hút khách du lịch bởi rất nhiều sự kiện và màn biểu diễn về đêm.</string>
    <string name="chitietcaurong">Cầu Rồng là cây cầu có kiến trúc độc đáo nhất Việt Nam,
        là con đường ngắn nhất nối sân bay quốc tế Đà Nẵng với những đường trục chính trong thành phố.
        Không chỉ đóng vai trò là đường giao thông huyết mạch của thành phố, cầu Rồng, với kiến trúc mô phỏng con rồng thời
        Lý đang vươn mình bay ra biển, là một trong những kiến trúc mang tính biểu tượng của thành phố Đà Nẵng.</string>
    <string name="caurong">Đúng như tên gọi, cầu Rồng với hình dáng một con rồng có chiều dài 666m,
        rộng 37.5m bắc qua con sông Hàn. Với kinh phí gần 1.5 tỷ đồng, cây cầu có sáu làn xe và được thông xe lần đầu vào ngày 29
        tháng Ba năm 2013 nhân dịp kỉ niệm 38 năm ngày giải phóng thành phố Đà Nẵng. Nếu như bạn không biết thì thiết kế của cầu Rồng
        gắn liền với những bước tiến trong lịch sử của nghệ thuật kiến trúc mới của thành phố Đà Nẵng</string>

    <string name="title_activity_test" translatable="false">test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="changepass">Thay Đổi Mật Khẩu</string>
    <string name="terms">Điều khoản &amp; điều kiện</string>
    <string name="selectlanguage">Chọn Ngôn Ngữ</string>
    <string name="version">Lịch Sử Đặt Chổ </string>
    <string name="logout">Đăng Xuất</string>
    <string name="backkk">Trở Về</string>
    <string name="profile">Hồ Sơ </string>

    <!-- start   main-->
    <string name="home_menu">Home</string>
    <string name="tour_menu">Tour</string>
    <string name="Hotel_menu">Hotel</string>
    <string name="final_menu">Travel search</string>
    <string name="account_menu">Account</string>
    <string name="welcome">Welcome</string>
    <string name="timkiemdulich">Your Search Travel</string>
    <string name="Recent">Recent</string>
    <string name="SeeAll">See All</string>
    <string name="TopPlaces">Top Places</string>
    <string name="SearchDestinations">Search Destinations</string>
    <!--end main-->

    <!--    start tourist-->
    <string name="one">One</string>
    <string name="View">View</string>
    <string name="Worth">Worth</string>
    <string name="a">a</string>
    <string name="ThousandWords">Thousand Words</string>
    <string name="find_tourist">Tìm Kiếm</string>
    <string name="BanaHills">Bà Nà Hills</string>
    <string name="Cvca">Công Viên Châu Á</string>

    <!--    end tourist-->
    <!--    start tourist cvca-->
    <string name="asia">ASIA PARK – Công Viên Châu Á</string>
    <string name="typecongvienchaua">Gọi Asia Park là “công viên của những kỷ lục”
        bởi tới thời điểm hiện tại, nơi đây hội tụ nhiều cái nhất:
        Queen Cobra – tàu lượn dạng treo lớn nhất Việt Nam với 5 vòng xoắn 360 liên tục trên độ cao 34m;
        Golden Sky Tower -Top 2 tháp rơi tự do cao nhất Việt Nam với chiều cao 47 m, tương đương với chiều cao của tòa nhà 13 tầng…</string>
    <string name="chitietcongvienchaua">Ngay ngày đầu khai trương, Asia Park đã đưa Đà Nẵng vào sách
        kỷ lục Guinness của thế giới, với Top 10 vòng quay cao nhất thế giới
        Sun Wheel cao 115m (tương đương tòa nhà 25 tầng). Từ trên độ cao đó,
        Đà Nẵng đẹp một cách khoáng đạt với tầm nhìn rộng mở. Cái tên “Tầm nhìn Đà Nẵng”
        có lẽ bắt nguồn từ đây.</string>
    <string name="congvienchaua">Tọa lạc ngay trung tâm thành phố biển xinh đẹp Đà Nẵng,
        Công viên Châu Á – Asia Park là điểm đến hàng đầu cho mọi du khách và người dân địa phương. Du khách có
        thể vào cửa tham quan công viên miễn phí hàng ngày trong khung giờ 15h00 – 22h00.
        Nơi đây được biết đến như một công viên giải trí với nhiều trò chơi hiện đại, tổ hợp chợ đêm được vận hành theo
        tiêu chuẩn Hàn Quốc, là điểm đến ẩm thực với nhiều lựa chọn phong phú. Cũng không thể không kể đến những chương trình sự
        kiện và trình diễn nghệ thuật thu hút hàng ngàn người tham dự.</string>
    <!--    end tourist cvca-->


    <!--    start tourist bana-->
    <string name="bana">Cây Cầu Vàng Đà Nẵng trên đỉnh Bà Nà Hill</string>
    <string name="cautayvang">Cầu Vàng Bà Nà Hill được khánh thành vào tháng 6 năm 2018. Chỉ trong một thời gian ngắn,
        các tour du lịch Cây Cầu Vàng Đà Nẵng đã thu hút hàng trăm ngàn lượt khách
    Với độ dài 150 mét và nằm ở độ cao 1414 mét so với mực nước biển, Cây Cầu Vàng đã tạo nên một lối đi giữa không trung,
        giữa khung ảnh mờ sương như chốn bồng lai tiên cảnh của núi Bà Nà</string>
    <string name="typeDN">Bà Nà Hills được xây dựng trên đỉnh núi Chúa, thuộc huyện Hòa Vang,
        cách trung tâm thành phố Đà Nẵng khoảng 25 km về phía Tây Nam, ở độ cao 1487 m so với mực nước biển.
        Đây là khu du lịch trên núi đầu tiên, được ví như “Đà Lạt của miền Trung” hay “ hòn ngọc khí hậu” của Viêt Nam.
    </string>
    <string name="chitietDN">
        Đây là khu du lịch trên núi đầu tiên, được ví như “Đà Lạt của miền Trung” hay “ hòn ngọc khí hậu” của Viêt Nam.
        Ngay từ những ngày đầu đi vào hoạt động, đến nay sức hút của Bà Nà Hiils vẫn chưa hề thay đổi.
        Được biết đến là điểm du lịch với nhiều địa điểm đẹp, nhiều trải nghiệm độc đáo,
        Bà Nà trở Thành nơi lui tới của nhiều du khách Việt Nam cũng như nước ngoài.
        Mỗi năm, nơi đây đón hàng triệu lượt khách.
        Do thường xuyên được đầu tư mạnh về du lịch nên trong mùa cao điểm luôn trong tình trạng “cháy vé”.
    </string>

    <!--    end tourist bana-->
    <!--    start điều khoản-->
    <string name="dieukhoansudung">I.Điều Khoản Sử Dụng</string>
    <string name="dieukhoan">BẠN PHẢI ĐỌC NHỮNG ĐIỀU KHOẢN SỬ DỤNG DƯỚI ĐÂY TRƯỚC KHI SỬ DỤNG TRANG WEB NÀY.
        VIỆC SỬ DỤNG TRANG WEB NÀY XÁC NHẬN VIỆC CHẤP THUẬN VÀ TUÂN THỦ CÁC ĐIỀU KHOẢN VÀ ĐIỀU KIỆN DƯỚI ĐÂY.
        Bằng cách truy cập và/hoặc sử dụng Trang Web www.traveloka.com/vi-vn (“Trang Web”), bạn thừa nhận rằng bạn đã đọc,
        hiểu và đồng ý chịu sự ràng buộc bởi các Điều Khoản Sử Dụng được quy định dưới đây và các điều khoản và điều kiện khác
        liên quan đến Trang Web, bao gồm nhưng không giới hạn ở các điều khoản và điều kiện về bảo mật và Các Câu Hỏi Thường Gặp,
        mà chúng cấu thành các thành phần không thể tách rời của các Điều Khoản Sử Dụng (“Điều Khoản”) này. Bạn phải đủ mười tám (18)
        tuổi trở lên để được phép sử dụng Trang Web.
        Xin lưu ý rằng chúng tôi có thể thay đổi, sửa đổi, bổ sung và loại bỏ các Điều Khoản này vào bất cứ thời điểm nào mà không cần thông báo trước.
        Bạn phải đọc các Điều Khoản này một cách định kỳ. Bằng việc tiếp tục sử dụng Trang Web này sau khi đã có những thay đổi như vậy đối với các Điều Khoản,
        người truy cập, người dùng hoặc Người Dùng Đã Đăng Ký (“bạn” hay “Người Dùng”) đồng ý và chấp thuận với những thay đổi đó. Nếu bạn sử dụng bất kỳ dịch vụ
        nào khác của chúng tôi, thì việc sử dụng của bạn được dựa trên sự chấp thuận và tuân thủ các điều khoản và điều kiện được áp dụng đối với các dịch vụ đó.
        Các quy định của Điều Khoản Sử Dụng này được dịch từ phiên bản gốc tiếng Anh, và được cung cấp nhằm tạo sự thuận tiện cho việc xem xét của bạn. Có thể có một số
        khác biệt giữa bản dịch và bản gốc tiếng Anh, và trong trường hợp có bất kỳ sự khác biệt nào như vậy, thì sự khác biệt đó được coi là lỗi dịch thuật và bản tiếng Anh
        sẽ được ưu tiên áp dụng. Nếu nghi ngờ về tính chính xác của thông tin chứa trong bản dịch, xin vui lòng tham khảo phiên bản tiếng Anh.</string>

    <!--    end điều khoản-->
    <!--    start dateil -->
    <string name="banaduonglen">Bà Nà Hills  Đường Lên Tiên Cảnh</string>
    <string name="about">About</string>
    <string name="VenueType">Venue Type</string>
    <string name="TypeofView">Type of View</string>

    <!--    end dateil bana-->


    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>

</resources>